# Valhalla

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-on-push.yml
game/: GameSetup.cpp  GameSetup.h
game/choice/: Action.h  Choice.h  ChoicesStack.cpp  ChoicesStack.h
game/choice/actions/: LightningAction.cpp  LightningAction.h  PortalAction.cpp  PortalAction.h  PushAction.cpp  PushAction.h
game/choice/choices/: TimeTravelChoice.cpp  TimeTravelChoice.h
game/choice/options/: OptionNode.cpp  OptionNode.h  Options.cpp  Options.h
game/entities/: Entity.h
game/state/: GameState.h
gui/frames/: GuiFrame.h  GuiFrameStack.cpp  GuiFrameStack.h  GuiFrameStackInterface.h
gui/frames/abstract/: BasicGuiFrame.cpp  BasicGuiFrame.h
gui/frames/structure/: GuiFrame.cpp  GuiFrame.h  GuiFrameStack.cpp  GuiFrameStack.h  GuiFrameStackInterface.h
gui/frames/types/: DemoFrame.cpp  DemoFrame.h  LightningFrame.cpp  LightningFrame.h  MainMenuFrame.cpp  MainMenuFrame.h  OptionsFrame.cpp  OptionsFrame.h  PortalFrame.cpp  PortalFrame.h
gui/frames/util/: ConsoleUtil.cpp  ConsoleUtil.h
gui/test/: FrameTest.cpp  FrameTest.h
structures/: Stack.h  StackNode.h
